--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     
         <div>
-            <span id="miliseconds">00</span>
+            <span id="milliseconds">00</span>
             <span class="time">MSECONDS</span>
         </div>
     </div>
